--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     {% if title %}
-    <title>Django Blog - {{title}}</title>
+    <title>Django Blog - {{ title }}</title>
     {% else %}
     <title>Django Blog</title>
     {% endif %}
