--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -28,6 +28,10 @@ body {
     font-weight: 500;
   }
   
+  .nav-right{
+    margin: auto;
+  }
+
   .content-section {
     background: #ffffff;
     padding: 10px 20px;
@@ -82,4 +86,5 @@ body {
   .account-heading {
     font-size: 2.5rem;
   }
+
   
