--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,16 +5,16 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4">Login</legend>
                 {{ form|crispy }} <!--(.as_p) is for sort form by paragraph-->
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign In</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already have an account? <a class="mb-2" href="#">Login</a>
+                Need an account? <a class="mb-2" href="#">Register</a>
             </small>
         </div>
     </div>
