add profile and login page

--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -2,5 +2,5 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <h1>You have been logged out</h1>
-    <p>Wanna login again? <a href='{% url "login" %}'>Login</a></p>
+    <p>Wanna login again? <a href="{% url 'login' %}">Login</a></p>
 {% endblock content %}
