--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,8 +25,9 @@
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav nav-right">
-                        {% if user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>    
+                        {% if user.is_authenticated%}
+                            <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                            <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                         {% else %}
                             <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                             <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
