--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -14,7 +14,7 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already have an account? <a class="mb-2" href="#">Login</a>
+                Already have an account? <a class="mb-2" href="{{% url "login" %}}">Login</a>
             </small>
         </div>
     </div>
