--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,23 +1,24 @@
-{% extends "blog/base.html" %}
-{% block content %}
-    {% for post in posts %}
+{% extends "blog/base.html" %} 
+{% block content %} 
+    <h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+    {% for post in posts%}
         <article class="media content-section">
-            <img src="{{ post.author.profile.image.url }}" alt="Author" class="rounded-circle article-img">
-            <div class="media-body">
+        <img src="{{ post.author.profile.image.url }}" alt="Author" class="rounded-circle article-img">
+        <div class="media-body">
             <div class="article-metadata">
-                <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
-                <small class="text-muted">{{ post.date_posted | date:"F d, Y"}}</small>
+            <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
+            <small class="text-muted">{{ post.date_posted | date:"F d, Y"}}</small>
             </div>
             <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
-            </div>
+        </div>
         </article>
-    {% endfor %}
-    
+    {% endfor %} 
     {% if is_paginated %}
+
         {% if page_obj.has_previous %}
-        <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
         {% endif %}
 
         {% for num in page_obj.paginator.page_range  %}
@@ -32,6 +33,6 @@
             <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
             <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
         {% endif %}
+
     {% endif %}
-      
 {% endblock content %}
